<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddContact">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name_placeholder"
        android:width="300dp"
        android:id="@+id/contactName"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_phone"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contact_phone_placeholder"
        android:width="300dp"
        android:id="@+id/contactPhone"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupSpinner"
        android:layout_marginLeft="10dp"
        android:minWidth="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/save"
            android:id="@+id/saveContactButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:id="@+id/cancelButton" />

    </LinearLayout>

</LinearLayout>